--- a/public/index copy.html
+++ b/public/index copy.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sistema de transmisión de pantalla en tiempo real">
-    <title>PerServer</title>
+    <title>Transmisión de Pantalla</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     
     <style>
         body {
-            background-color: #0f172a;
+            background: linear-gradient(135deg, #0f172a 0%, #581c87 50%, #0f172a 100%);
             min-height: 100vh;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
         }
@@ -52,7 +52,7 @@
                     </svg>
                 </div>
                 <h1 class="text-4xl md:text-5xl font-bold text-white mb-4">
-                    Transmisión
+                    Transmisión de Pantalla en Vivo
                 </h1>
                 <p class="text-purple-200 text-lg">
                     Comparte tu pantalla o únete a una transmisión existente
@@ -116,7 +116,7 @@
 
             <!-- Información adicional -->
             <div class="mt-8 bg-white/5 backdrop-blur-lg rounded-xl p-6 border border-white/10">
-                <h3 class="text-white font-semibold mb-3 text-lg">✨ Proximamente...</h3>
+                <h3 class="text-white font-semibold mb-3 text-lg">✨ Características del Sistema:</h3>
                 <div class="grid md:grid-cols-2 gap-3">
                 </div>
             </div>
@@ -256,7 +256,7 @@
                     <button 
                         onclick="leaveRoom()" 
                         class="bg-red-500 hover:bg-red-600 text-white font-semibold py-3 px-6 rounded-xl transition-colors shadow-lg hover:shadow-xl">
-                         Salir
+                        🚪 Salir
                     </button>
                 </div>
             </div>
@@ -273,7 +273,7 @@
 
             <div class="mt-4 text-center">
                 <p class="text-purple-300 text-sm bg-blue-900/30 rounded-lg p-3 inline-block">
-                     Estás viendo la transmisión en vivo. La calidad se ajusta automáticamente según tu conexión.
+                    📺 Estás viendo la transmisión en vivo. La calidad se ajusta automáticamente según tu conexión.
                 </p>
             </div>
         </div>
