modified:   public/app.js 	modified:   public/index.html 	new file:   public/qr.js

--- a/public/index copy.html
+++ b/public/index copy.html
@@ -280,6 +280,7 @@
     </div>
 
     <!-- Cargar el JavaScript del cliente -->
+    <script src="qr.js"></script>
     <script src="app.js"></script>
     
 </body>
