--- a/public/index.html
+++ b/public/index.html
@@ -280,6 +280,7 @@
     </div>
 
     <!-- Cargar el JavaScript del cliente -->
+    <script src="qrious.min.js"></script>
     <script src="qr.js"></script>
     <script src="app.js"></script>
     
