modified:   public/index.html 	modified:   public/qr.js 	new file:   public/qrcode.min.js 	modified:   public/qrious.min.js

--- a/public/index.html
+++ b/public/index.html
@@ -280,7 +280,7 @@
     </div>
 
     <!-- Cargar el JavaScript del cliente -->
-    <script src="qrious.min.js"></script>
+    <script src="qrcode.min.js"></script>
     <script src="qr.js"></script>
     <script src="app.js"></script>
     
