modified:   public/app.js 	modified:   public/index.html

--- a/public/index.html
+++ b/public/index.html
@@ -217,6 +217,12 @@
                     playsinline 
                     class="w-full h-auto min-h-[400px]">
                 </video>
+                <button 
+                    onclick="toggleFullscreen('localVideo')"
+                    class="mt-2 bg-purple-700 hover:bg-purple-800 text-white px-3 py-1 rounded shadow"
+                    title="Pantalla completa">
+                    ⛶ Pantalla completa
+                </button>
             </div>
 
             <div class="mt-4 text-center">
@@ -269,6 +275,12 @@
                     playsinline 
                     class="w-full h-auto min-h-[400px]">
                 </video>
+                <button 
+                    onclick="toggleFullscreen('remoteVideo')"
+                    class="mt-2 bg-blue-700 hover:bg-blue-800 text-white px-3 py-1 rounded shadow"
+                    title="Pantalla completa">
+                    ⛶ Pantalla completa
+                </button>
             </div>
 
             <div class="mt-4 text-center">
